--- a/public/index.html
+++ b/public/index.html
@@ -12,25 +12,17 @@
     <div class="board-section">
       <h2>NodejsとMongoDBで掲示板</h2>
       <!-- この中に挿入していく -->
-      <div class="thread-section">
-        <div class="single-thread">
-          <h3>タイトル</h3>
-          <p>内容</p>
-        </div>
-        <div class="single-thread">
-          <h3>タイトル</h3>
-          <p>内容</p>
-        </div>
-        <div class="single-thread">
-          <h3>タイトル</h3>
-          <p>内容</p>
-        </div>
-      </div>
+      <div class="thread-section"></div>
       <form class="form-section">
         <p class="form-section-input-title">タイトル</p>
         <input type="text" placeholder="タイトル" id="inputTitle" />
         <p class="form-section-input-title">内容</p>
-        <textarea placeholder="内容を入力" id="inputContent" rows="10" cols="30"></textarea>
+        <textarea
+          placeholder="内容を入力"
+          id="inputContent"
+          rows="10"
+          cols="30"
+        ></textarea>
         <br />
         <button id="submitButton" type="submit">送信</button>
       </form>
